--- a/android-pdfview-sample/AndroidManifest.xml
+++ b/android-pdfview-sample/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:theme="@style/AppTheme" 
 		android:label="@string/app_name" >
 		<activity
-			android:name="com.joanzapata.PDFViewActivity_"
+			android:name="com.joanzapata.PDFViewActivity"
 			android:label="@string/app_name" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
