[Nan Jiang] added FileProvider but it doesn't work yet

--- a/android-pdfview-sample/AndroidManifest.xml
+++ b/android-pdfview-sample/AndroidManifest.xml
@@ -39,6 +39,16 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-	</application>
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.joanzapata.PdfFileProvider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/share_file_paths" />
+        </provider>
+
+	</application>
 </manifest>
