--- a/android-pdfview-sample/build.gradle
+++ b/android-pdfview-sample/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     provided 'com.googlecode.androidannotations:androidannotations:2.7.1'
     compile 'com.googlecode.androidannotations:androidannotations-api:2.7.1'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
+    compile 'com.android.support:support-v4:19.0.+'
 }
